screen cut off at the bottom. still not fixed

--- a/styles.scss
+++ b/styles.scss
@@ -27,10 +27,19 @@
 
 }
 
+
+
 body {
   background-color: #d8d8d8;
   color: white;
   font-family: 'florencesansregular', sans-serif;
+  overflow: auto;
+}
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Small phones */
